Address review: async-recorded gate w/ stall budget, coordinator routed writes, invalidity in node health, lease cooldown and cross-process test